# cookiecutter-pypackage

./: README.md  cookiecutter.json  faq.md  help.md  requirements.txt  structure.md
{{cookiecutter.slug}}/: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  setup.py
{{cookiecutter.slug}}/.github/workflows/: docs.yml
{{cookiecutter.slug}}/.husky/: post-merge  pre-commit
{{cookiecutter.slug}}/docs/: index.md
{{cookiecutter.slug}}/scripts/docs/: generate_reference_pages.py
{{cookiecutter.slug}}/src/{{cookiecutter.package_name}}/: __init__.py  credentials.py
{{cookiecutter.slug}}/src/{{cookiecutter.package_name}}/utils/: logging.py
