# Build requirements
# See [PEP 518](https://peps.python.org/pep-0518/#build-system-table)
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

# Project Metadata
# See [PEP 621](https://peps.python.org/pep-0621/#details)
[project]
authors = [
  {name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}"},
]
description = "{{cookiecutter.description}}"
# keywords = []
# license = "MIT"
dynamic = ["version"]
name = "{{cookiecutter.slug}}"
readme = "README.md"
requires-python = ">=3.10"
# Core dependencies
dependencies = []

[project.optional-dependencies]
dev = [
  "bandit[toml]==1.7.4",
  "black",
  "isort",
  "pylama[eradicate,mypy,radon,toml]",
  "pre-commit",
  "ruff",
]
doc = []
test = []

[project.urls]
# changelog = ""
# documentation = ""
# homepage = ""
repository = "{{cookiecutter.github_repo}}"

# https://github.com/psf/black
[tool.black]
line-length = 88

# https://github.com/PyCQA/isort
[tool.isort]
known_local_folder = ["{{cookiecutter.package_name}}"]
lines_after_imports = 2
profile = "black"
skip_gitignore = true

# https://github.com/charliermarsh/ruff
[tool.ruff]
ignore = [
  "E501", # Avoid checking for line-length violations
  "D203", # Conflicts with Google style
  "D204", # Conflicts with Google style
  "D213", # Conflicts with Google style
  "D215", # Conflicts with Google style
  "D400", # Conflicts with Google style
  "D404", # Conflicts with Google style
  "D406", # Conflicts with Google style
  "D407", # Conflicts with Google style
  "D408", # Conflicts with Google style
  "D409", # Conflicts with Google style
  "D413", # Conflicts with Google style
]
line-length = 88
select = [
  "E", # [`pycodestyle`](https://github.com/charliermarsh/ruff#pycodestyle)
  "F", # [`pyflakes`](https://github.com/charliermarsh/ruff#pyflakes)
  "D", # [`pydocstyle`](https://github.com/charliermarsh/ruff#pydocstyle)
  "U", # [`pyupgrade`](https://github.com/charliermarsh/ruff#pyupgrade)
  "N", # [`pep8-naming`](https://github.com/charliermarsh/ruff#pep8-naming)
  "C", # [`flake8-comprehensions`](https://github.com/charliermarsh/ruff#flake8-comprehensions)
  "B", # [`flake8-bugbear`](https://github.com/charliermarsh/ruff#flake8-bugbear)
  "A", # [`flake8-builtins`](https://github.com/charliermarsh/ruff#flake8-builtins)
  "Q", # [`flake8-quotes`](https://github.com/charliermarsh/ruff#flake8-quotes)
  "ANN", # [`flake8-annotations`](https://github.com/charliermarsh/ruff#flake8-annotations)
  "RUF", # [`ruff`](https://github.com/charliermarsh/ruff#ruff-specific-rules)
  "M", # [`noqa`](https://github.com/charliermarsh/ruff#meta-rules)
]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
per-file-ignores = {}
# Assume Python 3.10.
target-version = "py310"

# https://github.com/klen/pylama
[tool.pylama]
linters = "eradicate,mccabe,mypy,radon"
max_line_length = 88

# https://github.com/PyCQA/bandit
[tool.bandit]
